namespace AnDS_laba_2.View;

public enum HanoiTowersMode
{
    Auto,
    NotAuto
}